--- a/examples/UseUseBoost/CMakeLists.txt
+++ b/examples/UseUseBoost/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.5)
 set(name UseUseBoost)
 project(${name} VERSION 0.1.0)
+
+set(OBO_VERBOSE ON)
+
 include(OpticksBuildOptions)
 
 
@@ -15,14 +18,16 @@ not being created by BCM, and not having the expected properties.
 
 See ../README.rst for the kludge done upstream in UseBoost
 that tries to do the below find automatically 
-#]=]
 
 set(COMPONENTS system program_options filesystem regex )
 find_package(Boost REQUIRED COMPONENTS ${COMPONENTS} )
 set_target_properties(Boost::system  PROPERTIES INTERFACE_FIND_PACKAGE_NAME "Boost REQUIRED COMPONENTS ${COMPONENTS}")
 
+#]=]
 
+message(STATUS "UseUseBoost.CMakeLists.find_package.[")
 find_package(UseBoost 0.1.0 REQUIRED)
+message(STATUS "UseUseBoost.CMakeLists.find_package.]")
 
 echo_target_std(Opticks::UseBoost)
 
