succeed with CMAKE_PREFIX_PATH selection between Boost 1.70 1.71 1.72 across UseBoost UseUseBoost see om-export-test

--- a/examples/UseBoostFS/CMakeLists.txt
+++ b/examples/UseBoostFS/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
-set(name UseBoost)
+set(name UseBoostFS)
 project(${name} VERSION 0.1.0)
 
 set(BCM_VERBOSE ON)
 include(OpticksBuildOptions)
 
+
 #set(Boost_DEBUG ON)
 #set(Boost_NO_BOOST_CMAKE ON)
 #find_package(Boost REQUIRED COMPONENTS filesystem)   
-
 
 
 set(COMPONENTS system program_options filesystem regex )
@@ -41,11 +41,9 @@ which keeps the version string as the 2nd argument.
 echo_pfx_vars(Boost "VERSION;DIR;FOUND;FILESYSTEM_FOUND;SYSTEM_FOUND;INCLUDE_DIRS;LIBRARY_DIRS;FIND_COMPONENTS")
 echo_target_std(Boost::filesystem)
 
-set(SOURCES ${name}.cc ) 
-set(HEADERS ${name}.hh )
 
-add_library(${name} SHARED ${SOURCES})
-target_link_libraries(${name} PUBLIC 
+add_executable(${name} ${name}.cc)
+target_link_libraries( ${name} PUBLIC 
    Boost::system
    Boost::program_options
    Boost::filesystem
@@ -53,23 +51,7 @@ target_link_libraries(${name} PUBLIC
 )
 
 
-#[=[
-set(example PTreeMinimal)
-add_executable(${example} ${example}.cc)
-target_link_libraries( ${example} PUBLIC 
-   Boost::system
-   Boost::program_options
-   Boost::filesystem
-   Boost::regex
-)
-#]=]
-
-
-
-set(BCM_VERBOSE ON)
-
-bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL) 
-install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(TARGETS ${name}  DESTINATION lib)
 
 echo_target_std(${name})
 
