--- a/examples/UseOpticksGL/CMakeLists.txt
+++ b/examples/UseOpticksGL/CMakeLists.txt
@@ -3,6 +3,12 @@ set(name UseOpticksGL)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
+if(POLICY CMP0077)  # see note/issues/cmake-3.13.4-FindCUDA-warnings.rst
+    cmake_policy(SET CMP0077 OLD)
+endif()
+
+
+
 set(OpticksGL_VERBOSE ON)
 find_package(OpticksGL REQUIRED CONFIG)   
 
