generating bin/opticks-setup.sh for self-contained and easy to understand environment setup

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -19,6 +19,9 @@ set(SCRIPTS
    CMakeModules.py 
    okdist.py  
    oktar.py
+
+   find_package.py
+   pkg_config.py
 )
 
 # top level python needs to go in bin, 
