amend Find modules to allow find.py getting config info direct from CMake to get includedir and libdir for all packages

--- a/cudarap/CMakeLists.txt
+++ b/cudarap/CMakeLists.txt
@@ -55,7 +55,7 @@ SET(HEADERS
 
 set(LIBRARIES
    Opticks::SysRap
-   Opticks::CUDA
+   Opticks::OpticksCUDA
    Opticks::CUDASamples
    Opticks::OKConf
 )
