iterate on the externals install, improving error notification and reducing env dependency

--- a/examples/UseGLM/CMakeLists.txt
+++ b/examples/UseGLM/CMakeLists.txt
@@ -5,6 +5,8 @@ include(OpticksBuildOptions)
 
 #bcm_setup_version(VERSION 0.1.0 GENERATE_HEADER ${name}Version.hh)
 
+set(GLM_VERBOSE ON)
+
 find_package(GLM REQUIRED MODULE)
 
 add_library(${name} SHARED ${name}.cc)
