experiment with CMake recursive traverse of imported targets

--- a/examples/UseG4OK/CMakeLists.txt
+++ b/examples/UseG4OK/CMakeLists.txt
@@ -3,6 +3,10 @@ set(name UseG4OK)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
+include(OpticksCMakeTraverse)
+
+
+
 if(POLICY CMP0077)  # see note/issues/cmake-3.13.4-FindCUDA-warnings.rst
     cmake_policy(SET CMP0077 OLD)
 endif()
@@ -24,6 +28,19 @@ target_link_libraries(${name} PUBLIC Opticks::G4OK)
 #install(TARGETS ${name}  DESTINATION ${CMAKE_INSTALL_LIBDIR})   this goes into lib64 which is not my standard
 install(TARGETS ${name}  DESTINATION lib) 
 
+
+
+set(LL_VERBOSE OFF)
+
+set(PROP "LOCATION")
+#set(PROP "INTERFACE_INCLUDE_DIRECTORIES")
+#set(PROP "INTERFACE_COMPILE_DEFINITIONS")
+
+set(OUT_LIST)
+traverse_out(OUT_LIST ${PROP} Opticks::G4OK)
+foreach(OUT ${OUT_LIST})
+   message(STATUS ".... traverse_out.OUT: ${OUT} " )
+endforeach()
 
 
 
