getting most examples to work : only UseOptiXProgramPP failing, it segments at launch

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -23,8 +23,8 @@ set(SCRIPTS
    find_package.py
    pkg_config.py
    findpkg.py
-   find.py
    pc.py
+   ptx.py
 )
 
 # top level python needs to go in bin, 
