--- a/examples/UseOptiXBufferPP/CMakeLists.txt
+++ b/examples/UseOptiXBufferPP/CMakeLists.txt
@@ -32,7 +32,7 @@ add_executable( ${name} ${_generated_OBJ_files} ${_generated_PTX_files} ${SOURCE
 target_link_libraries(${name} 
     PUBLIC 
        Opticks::OptiX 
-       Opticks::CUDA
+       Opticks::OpticksCUDA
        Opticks::OKConf 
        Opticks::SysRap 
        Opticks::NPY
