getting the build against foreign externals to pass the go.sh examples

--- a/examples/UseCFG4/CMakeLists.txt
+++ b/examples/UseCFG4/CMakeLists.txt
@@ -3,6 +3,11 @@ set(name UseCFG4)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
+if(POLICY CMP0077)  # see note/issues/cmake-3.13.4-FindCUDA-warnings.rst
+    cmake_policy(SET CMP0077 OLD)
+endif()
+
+
 set(CFG4_VERBOSE ON)
 find_package(CFG4 REQUIRED CONFIG)   
 
