--- a/examples/UseOpticksXercesC/CMakeLists.txt
+++ b/examples/UseOpticksXercesC/CMakeLists.txt
@@ -3,6 +3,11 @@ set(name UseOpticksXercesC)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
+#[=[
+When the G4persistency target is present this arranges to find its XercescC
+#]=]
+find_package(G4 REQUIRED MODULE)
+
 set(OpticksXercesC_VERBOSE ON)
 find_package(OpticksXercesC REQUIRED MODULE)   
 
