--- a/examples/UseG4/CMakeLists.txt
+++ b/examples/UseG4/CMakeLists.txt
@@ -11,7 +11,15 @@ echo_target(Opticks::G4 "INTERFACE_LINK_LIBRARIES;INTERFACE_INCLUDE_DIRECTORIES;
 #echo_target_twolevel(Opticks::G4 "INTERFACE_LINK_LIBRARIES" "IMPORTED_LOCATION")
 
 
-#echo_target( G4persistency "INTERFACE_LINK_LIBRARIES;INTERFACE_INCLUDE_DIRECTORIES;INTERFACE_COMPILE_DEFINITIONS" )
+echo_target( G4persistency "INTERFACE_LINK_LIBRARIES;INTERFACE_INCLUDE_DIRECTORIES;INTERFACE_COMPILE_DEFINITIONS" )
+
+if(TARGET G4persistency)
+   get_target_property(ILL G4persistency INTERFACE_LINK_LIBRARIES)
+   message(STATUS "G4persistency.ILL : ${ILL}")
+else()
+   message(FATAL_ERROR "FAILED TO FIND G4persistency TARGET ")
+endif()
+
 
 
 
