investigate CFG4 linking issues with G4MULTITHREADED G4USE_STD11 branching and CLHEP internal/external incompatibility probably related to NOT using -DGEANT4_USE_SYSTEM_CLHEP but teeing up another CLHEP in the junoenv

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -17,6 +17,9 @@ find_package(OpticksXercesC  REQUIRED MODULE)
 find_package(OpticksGeo      REQUIRED CONFIG)
 find_package(ThrustRap       REQUIRED CONFIG)   # for TCURAND
 
+#message(STATUS "Geant4_DEFINITIONS:${Geant4_DEFINITIONS} ")
+#add_definitions(${Geant4_DEFINITIONS} -DG4USE_STD11)
+add_definitions(-DG4USE_STD11)
 
 
 set(SOURCES
