more handling for external CLHEP not the geant4 builtin

--- a/examples/UseGeant4Engine/CMakeLists.txt
+++ b/examples/UseGeant4Engine/CMakeLists.txt
@@ -3,12 +3,21 @@ set(name UseGeant4Engine)
 project(${name})
 include(OpticksBuildOptions)
 
-find_package(Geant4 CONFIG QUIET)   
+find_package(Geant4 CONFIG)   
 
 if(Geant4_FOUND)
     message(STATUS "Geant4_FOUND   : ${Geant4_FOUND} ")
     message(STATUS "Geant4_VERSION : ${Geant4_VERSION} ")
+    message(STATUS "Geant4_CXXSTD  : ${Geant4_CXXSTD} ")
     message(STATUS "Geant4_DEFINITIONS : ${Geant4_DEFINITIONS} ")
+    message(STATUS "Geant4_LIBRARIES : ${Geant4_LIBRARIES} ")
+    message(STATUS "Geant4_INCLUDE_DIRS : ${Geant4_INCLUDE_DIRS} ")
+    message(STATUS "Geant4_builtin_clhep_FOUND :${Geant4_builtin_clhep_FOUND} ")
+    message(STATUS "Geant4_system_clhep_FOUND :${Geant4_system_clhep_FOUND} ")
+    message(STATUS "Geant4_system_clhep_ISGRANULAR : ${Geant4_system_clhep_ISGRANULAR} ") 
+    message(STATUS "CLHEP_DIR : ${CLHEP_DIR} ")
+    message(STATUS "CLHEP_INCLUDE_DIRS : ${CLHEP_INCLUDE_DIRS} ")
+
     #echo_target_std(Geant4)
     echo_pfx_vars(Geant4 "INCLUDE_DIR;INCLUDE_DIRS;LIBRARIES;DEFINITIONS")
 else()
