get examples/UseOptiXGeometryStandalone to work on macOS with OptiX 5, by detecting the compute_capability

--- a/examples/UseOptiXGeometryStandalone/CMakeLists.txt
+++ b/examples/UseOptiXGeometryStandalone/CMakeLists.txt
@@ -38,8 +38,8 @@ set_target_properties(ImpGLM  PROPERTIES
     INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_INSTALL_PREFIX}/externals/glm/glm"
 )
 
-
-set(COMPUTE_CAPABILITY 70)
+set(COMPUTE_CAPABILITY "70" CACHE STRING "Compute capability")
+message(STATUS " COMPUTE_CAPABILITY=${COMPUTE_CAPABILITY} ")
 
 set(CUDA_NVCC_FLAGS)
 list(APPEND CUDA_NVCC_FLAGS "-Xcompiler -fPIC")
