move default prefix of opticks-optionals : boost,clhep,xercesc,g4 to {OPTICKS_PREFIX}_externals distinct from {OPTICKS_PREFIX}/externals for the opticks-externals bcm,glm,...

--- a/extg4/CMakeLists.txt
+++ b/extg4/CMakeLists.txt
@@ -34,7 +34,7 @@ find_package(OpticksXercesC REQUIRED MODULE)
 
 
 
-#find_package(CLHEP      REQUIRED CONFIG)    Geant4 should have found it already
+find_package(CLHEP      REQUIRED CONFIG) #   Geant4 should have found it already
 
 if(CLHEP_FOUND)
 message(STATUS "CLHEP_DIR : ${CLHEP_DIR}" )
