--- a/examples/UseOptiXGeometryInstancedStandalone/CMakeLists.txt
+++ b/examples/UseOptiXGeometryInstancedStandalone/CMakeLists.txt
@@ -43,7 +43,9 @@ set_target_properties(ImpGLM  PROPERTIES
 )
 
 
-set(COMPUTE_CAPABILITY 70)
+set(COMPUTE_CAPABILITY "70" CACHE STRING "Compute capability")
+message(STATUS " COMPUTE_CAPABILITY=${COMPUTE_CAPABILITY} ")
+
 
 set(CUDA_NVCC_FLAGS)
 list(APPEND CUDA_NVCC_FLAGS "-Xcompiler -fPIC")
