debug investigating CSG simplification in NTreeChopper to fit PMT trees within limits, but decided easier to do most of this within source geometry

--- a/npy/CMakeLists.txt
+++ b/npy/CMakeLists.txt
@@ -88,6 +88,7 @@ set(SOURCES
     NNodePoints.cpp
     NNodeUncoincide.cpp
     NNodeNudger.cpp
+    NTreeChopper.cpp
     NNodeCoincidence.cpp
     
     NSolid.cpp
@@ -343,6 +344,7 @@ NField3.hpp
 NFieldGrid3.hpp
 
 NNodeNudger.hpp
+NTreeChopper.hpp
 NNodeCoincidence.hpp
 
 NSolid.hpp
