add PPM image reading capability to SPPM and use from ImageNPY to read images into arrays

--- a/npy/CMakeLists.txt
+++ b/npy/CMakeLists.txt
@@ -205,6 +205,7 @@ set(SOURCES
 
     NGeometry.cpp
     Ellipse.cpp
+    ImageNPY.cpp
 
 )
 
@@ -378,6 +379,7 @@ NEmitPhotonsNPY.hpp
 
 NGeometry.hpp
 Ellipse.hpp
+ImageNPY.hpp
 
 
 )
