--- a/optixrap/CMakeLists.txt
+++ b/optixrap/CMakeLists.txt
@@ -55,6 +55,7 @@ set(SOURCES
 
     OCtx.cc
     OTex.cc
+    OBuffer.cc
 )
 
 set(HEADERS
@@ -99,6 +100,7 @@ set(HEADERS
 
     OCtx.hh
     OTex.hh
+    OBuffer.hh
 )
 
 
