Linux OptiX 6.5 still not behaving, sphere instances coming out as big boxes, try UseOptiXGeometry

--- a/examples/UseOptiXGeometry/CMakeLists.txt
+++ b/examples/UseOptiXGeometry/CMakeLists.txt
@@ -23,6 +23,7 @@ set(SOURCES
 set(OPTIX_SOURCES
     ${name}.cu
     box.cu
+    sphere.cu
 )
 
 CUDA_WRAP_SRCS( ${name} PTX _generated_PTX_files ${OPTIX_SOURCES} )
