instrument UseOptiXGeometryInstancedOCtx intersects and analyse results with intersect_sdf_test.py checking SDF of intersect 3d coordinates at all pixels

--- a/sysrap/CMakeLists.txt
+++ b/sysrap/CMakeLists.txt
@@ -56,6 +56,7 @@ set(SOURCES
     STime.cc
     SASCII.cc
     SAbbrev.cc
+    SPack.cc
 ) 
 
 set(HEADERS
@@ -103,6 +104,7 @@ set(HEADERS
     SGDML.hh
     SASCII.hh
     SAbbrev.hh
+    SPack.hh
 )
 
 
