see notes/issues/geometry_model_review.rst : attempting to simplify GMergedMesh, especially slot 0,  by doing less, repositioning unselected volume handling to GNodeLib

--- a/ggeo/tests/CMakeLists.txt
+++ b/ggeo/tests/CMakeLists.txt
@@ -54,6 +54,9 @@ set(TEST_SOURCES
     GGeoLibTest.cc
 
     GGeoTest.cc
+    GGeoIdentityTest.cc
+    GGeoConvertTest.cc
+
     GMakerTest.cc
 
     GMergedMeshTest.cc
