up the G4_VERBOSITY in examples/UseG4NoOpticks and adopt the standard FindG4.cmake within the example

--- a/examples/UseG4NoOpticks/CMakeLists.txt
+++ b/examples/UseG4NoOpticks/CMakeLists.txt
@@ -19,7 +19,7 @@ endif()
 include(BCMDeploy)
 
 
-#set(G4_VERBOSE ON) 
+set(G4_VERBOSE ON) 
 find_package(G4 MODULE REQUIRED)   
 message(STATUS "G4_DIRDIR : ${G4_DIRDIR} ")
 
