bandaid for two new fails from OpticksGen::targetGenstep with --machinery option, see notes/issues/opticks-t-2020-oct7-2of434-fails-eventTest-OpSeederTest.rst

--- a/opticksgeo/tests/CMakeLists.txt
+++ b/opticksgeo/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ include(OpticksBuildOptions)
 set(TEST_SOURCES
     OpticksGeoTest.cc
     OpticksHubTest.cc
+    OpticksHubGGeoTest.cc
     OpenMeshRapTest.cc
 )
 
