add OpticksIdentity and label the full node tree with these triplet RPO ridx/pidx/oidx 32-bit encoded identifiers with GInstancer::labelTree

--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -67,6 +67,7 @@ set(SOURCES
     DemoCfg.cc
 
     IntersectSDF.cc
+    OpticksIdentity.cc
 )
 
 
@@ -139,6 +140,7 @@ set(HEADERS
     OpticksQuadrant.h
 
     IntersectSDF.hh
+    OpticksIdentity.hh
 )
 
 
