add triplet ridx/pidx/oidx access API to GGeo, debug and fix silent lsb truncation problem in numpyTest due to glm::uvec4 getQuad misuse, widespread migration to templated getQuad_ to avoid further such issues

--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -68,6 +68,7 @@ set(SOURCES
 
     IntersectSDF.cc
     OpticksIdentity.cc
+    OpticksShape.cc
 )
 
 
@@ -141,6 +142,7 @@ set(HEADERS
 
     IntersectSDF.hh
     OpticksIdentity.hh
+    OpticksShape.hh
 )
 
 
