--- a/opticksgeo/tests/CMakeLists.txt
+++ b/opticksgeo/tests/CMakeLists.txt
@@ -7,6 +7,9 @@ set(TEST_SOURCES
     OpticksGeoTest.cc
     OpticksHubTest.cc
     OpticksHubGGeoTest.cc
+)
+
+set(FORMER_TEST_SOURCES
     OpenMeshRapTest.cc
 )
 
