bring Torch Gensteps to G4Opticks for G4OKTest, enabling convenient G4Opticks hit handling tests with geometry cache and without having to ascend to the level of the experiment

--- a/npy/tests/CMakeLists.txt
+++ b/npy/tests/CMakeLists.txt
@@ -6,13 +6,13 @@ include(OpticksBuildOptions)
 
 set(_TESTS_FAILING_TO_INVESTIGATE_WHEN_IN_CONTEXT
 
-_TorchStepNPYTest.cc
 
 )
 
 
 set(_TEST_SOURCES
 
+TorchStepNPYTest.cc
 FabStepTest.cc
 NPriTest.cc
 
