add ggeo/GPho for higher level access to photon arrays with use of GGeo inverse transforms to provide local frame position, direction, polarization

--- a/ggeo/CMakeLists.txt
+++ b/ggeo/CMakeLists.txt
@@ -90,6 +90,7 @@ set(SOURCES
 
 
     GPropertyMap.cc
+    GPho.cc
 
 )
 
@@ -175,6 +176,7 @@ set(HEADERS
     GMeshLib.hh
 
     GPropertyMap.hh
+    GPho.hh
 )
 
 add_library( ${name}  SHARED ${SOURCES} ${HEADERS} )
