move sensor data handling into okg/SensorLib

--- a/opticksgeo/tests/CMakeLists.txt
+++ b/opticksgeo/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ set(TEST_SOURCES
     OpticksHubTest.cc
     OpticksHubGGeoTest.cc
 
+    SensorLibTest.cc
     MockSensorAngularEfficiencyTableTest.cc
 )
 
