OSensorLibTest issues motivate OCtx2dTest OCtx3dTest which reveal that OptiX 2d and 3d buffer serialization is column-major contrary to NPY row-major, forcing use of transpose_buffer=true in OCtx and transposed launch dimensions for non-folded/scrambled array content

--- a/optixrap/tests/CMakeLists.txt
+++ b/optixrap/tests/CMakeLists.txt
@@ -37,6 +37,8 @@ set(PAIRED_TEST_SOURCES  # tests with paired cc and cu
     ORngTest.cc
 
     OSensorLibTest.cc 
+    OCtx2dTest.cc 
+    OCtx3dTest.cc 
 )
 
 
